Add version check feature
